@@ -3,6 +3,8 @@ Version: 1.3.6
 Date: 11/12/25
   Minor Features:
     - Added item buffs for locomotives and cargo wagons.
+  Changes:
+    - Unvisited surfaces no longer have an entry in the JSON trades export.
   Balancing:
     - Limited the number of wagons that a train can use in trading.
   Bugfixes:
